Gelsemium (#4)
* Consolidated hyperlinklisteners and added hyperlink features to expansion details panel.
* Debug OXP presence is detected or configurable
Start TCPServer only if we have a debug-capable Oolite
* Switch to OpenJDK 21
* Markup MacOS architecture in artifact name
* Mark Windows artifact
* Add frame callback later in life cycle.
* Make MQTT connections configurable and add documentation
* Improve documentation
* Add generic feedback channel so MQTT clients can control Oolite
* Better indicate what removing an installation means
* Validate installations on startup
* Add MQTT configuration UI
* Write test message on startup
* MQTT configuration per installation, user configurable and with configurable prefix.
* Show test button only in installation editor
* Show used topics at configuration screen
* Fix panel size
* Fix error when Flavors cannot be loaded
* Without internet at least the local expansions will be shown
* Allow tests to perform even if we are offline.
Humm, a test that _should_ run offline requires apple.com?