@@ -18,8 +18,11 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.lang.module.ModuleDescriptor;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
+import java.net.UnknownHostException;
 import java.time.Duration;
 import java.time.Instant;
 import java.time.LocalDateTime;
@@ -52,6 +55,7 @@ import javax.xml.xpath.XPath;
 import javax.xml.xpath.XPathConstants;
 import javax.xml.xpath.XPathExpressionException;
 import javax.xml.xpath.XPathFactory;
+import oolite.starter.dcp.TCPServer;
 import oolite.starter.model.Command;
 import oolite.starter.model.Expansion;
 import oolite.starter.model.ExpansionReference;
@@ -59,6 +63,7 @@ import oolite.starter.model.Installation;
 import oolite.starter.model.OoliteFlavor;
 import oolite.starter.model.ProcessData;
 import oolite.starter.model.SaveGame;
+import oolite.starter.mqtt.MQTTAdapter;
 import oolite.starter.util.HttpUtil;
 import org.antlr.v4.runtime.misc.ParseCancellationException;
 import org.apache.commons.io.FileUtils;
@@ -90,6 +95,11 @@ public class Oolite implements PropertyChangeListener {
 
     private boolean terminate = false;
     private int running = 0;
+    
+    /**
+     * The server for the debug console protocol.
+     */
+    private TCPServer tcpserver;
     
     /**
      * Compares the given expansion with the given oolite version.
@@ -580,7 +590,7 @@ public class Oolite implements PropertyChangeListener {
      */
     protected void checkSurplusExpansions(List<ExpansionReference> references) {
         StackTraceElement ste = Thread.currentThread().getStackTrace()[2];
-        log.warn("checkSurplusExpansions({}) called by {} {} ({}:{})", references, ste.getClassName(), ste.getMethodName(), ste.getFileName(), ste.getLineNumber());
+        log.debug("checkSurplusExpansions({}) called by {} {} ({}:{})", references, ste.getClassName(), ste.getMethodName(), ste.getFileName(), ste.getLineNumber());
         if (references == null) {
             throw new IllegalArgumentException("references must not be null");
         }
@@ -759,6 +769,10 @@ public class Oolite implements PropertyChangeListener {
             injectExpansion();
         }
         
+        if (! isDebugConsoleRunning()) {
+            startDebugConsole();
+        }
+        
         try {
             log.info("executing {} in {}", command, dir);
 
@@ -798,6 +812,10 @@ public class Oolite implements PropertyChangeListener {
             }
             
         } finally {
+            if (isDebugConsoleRunning()) {
+                stopDebugConsole();
+            }
+
             running--;
             if (configuration != null) {
                 try {
@@ -1167,12 +1185,24 @@ public class Oolite implements PropertyChangeListener {
      */
     public List<Expansion> getAllExpansions() throws IOException {
         StackTraceElement ste = Thread.currentThread().getStackTrace()[2];
-        log.warn("getAllExpansions() called by {} {} ({}:{})", ste.getClassName(), ste.getMethodName(), ste.getFileName(), ste.getLineNumber());
+        log.debug("getAllExpansions() called by {} {} ({}:{})", ste.getClassName(), ste.getMethodName(), ste.getFileName(), ste.getLineNumber());
         Instant start = Instant.now();
         
         List<Expansion> resultList = new ArrayList<>();
-        List<Expansion> localList = getLocalExpansions();
-        List<Expansion> remoteList = getOnlineExpansions();
+        List<Expansion> localList = null;
+        try {
+            localList = getLocalExpansions();
+        } catch (Exception e) {
+            log.error("Could not load local expansions", e);
+            localList = new ArrayList<>();
+        }
+        List<Expansion> remoteList = null;
+        try {
+            remoteList = getOnlineExpansions();
+        } catch (Exception e) {
+            log.error("Could not load remote expansions", e);
+            remoteList = new ArrayList<>();
+        }
         
         localList.addAll(remoteList);
         for (Expansion current: localList) {
@@ -1211,7 +1241,7 @@ public class Oolite implements PropertyChangeListener {
      * 
      * @return the list
      */
-    public List<Expansion> getOnlineExpansions() throws IOException {
+    public List<Expansion> getOnlineExpansions() throws IOException, URISyntaxException {
         log.debug("getOnlineExpansion()");
         if (configuration == null) {
             throw new IllegalStateException(OOLITE_CONFIGURATION_MUST_NOT_BE_NULL);
@@ -1233,7 +1263,7 @@ public class Oolite implements PropertyChangeListener {
                     redirectCount--;
                     String newUrl = conn.getHeaderField("Location");
                     log.info("Follow redirect to '{}'", newUrl);
-                    conn = (HttpURLConnection)new URL(newUrl).openConnection();
+                    conn = (HttpURLConnection)new URI(newUrl).toURL().openConnection();
                     conn.setReadTimeout(5000);
                     status = conn.getResponseCode();
                     log.info("HTTP status for {}: {}", newUrl, status);
@@ -1315,7 +1345,7 @@ public class Oolite implements PropertyChangeListener {
      */
     public List<Expansion> getLocalExpansions() {
         StackTraceElement ste = Thread.currentThread().getStackTrace()[2];
-        log.warn("getLocalExpansions() called by {} {} ({}:{})", ste.getClassName(), ste.getMethodName(), ste.getFileName(), ste.getLineNumber());
+        log.debug("getLocalExpansions() called by {} {} ({}:{})", ste.getClassName(), ste.getMethodName(), ste.getFileName(), ste.getLineNumber());
 
         if (configuration == null) {
             throw new IllegalStateException(OOLITE_CONFIGURATION_MUST_NOT_BE_NULL);
@@ -1420,9 +1450,9 @@ public class Oolite implements PropertyChangeListener {
      * 
      * @param expansion the expansion
      */
-    public void install(Expansion expansion) throws IOException {
+    public void install(Expansion expansion) throws IOException, URISyntaxException {
         log.debug("install({})", expansion);
-        URL url = new URL(expansion.getDownloadUrl());
+        URL url = new URI(expansion.getDownloadUrl()).toURL();
 
 //      Old naming scheme - supports many different versions installed in parallel        
 //        File file = new File(configuration.getManagedAddonsDir(), expansion.getIdentifier() + "@" + expansion.getVersion() + ".oxz");
@@ -1711,7 +1741,7 @@ public class Oolite implements PropertyChangeListener {
      * @return the list of commands to get there
      */
     public List<Command> buildUpdateCommandList(List<Expansion> expansions, List<Expansion> updates) {
-        log.warn("buildUpdateCommandList({}, {})", expansions, updates);
+        log.debug("buildUpdateCommandList({}, {})", expansions, updates);
         List<Command> result = new ArrayList<>();
         
         for (Expansion u: updates) {
@@ -2426,6 +2456,9 @@ public class Oolite implements PropertyChangeListener {
             File a = Oolite.getAddOnDir(homeDir);
             if (a != null) {
                 i.setAddonDir(a.getCanonicalPath());
+                
+                File debugOxp = new File(a, "Basic-debug.oxp");
+                i.setDebugCapable(debugOxp.isDirectory());
             }
         } catch (IOException e) {
             log.warn("Cannot get AddOns dir for {}", homeDir, e);
@@ -2468,7 +2501,7 @@ public class Oolite implements PropertyChangeListener {
      * @return 
      */
     public List<ExpansionReference> diff(List<ExpansionReference> want, List<ExpansionReference> have) {
-        log.info("diff({}, {})", want, have);
+        log.debug("diff({}, {})", want, have);
         if (want == null) {
             throw new IllegalArgumentException("want must not be null");
         }
@@ -2543,8 +2576,8 @@ public class Oolite implements PropertyChangeListener {
      * @return the list of flavors
      * @throws Exception something went wrong
      */
-    public List<OoliteFlavor> getFlavorList() throws IOException {
-        URL url = new URL("https://addons.oolite.space/api/1.0/flavors/");
+    public List<OoliteFlavor> getFlavorList() throws IOException, URISyntaxException {
+        URL url = new URI("https://addons.oolite.space/api/1.0/flavors/").toURL();
         List<OoliteFlavor> result = new ArrayList<>();
         
         try (InputStream in = url.openStream()) {
@@ -2563,9 +2596,72 @@ public class Oolite implements PropertyChangeListener {
             }
             
             return result;
+        } catch (UnknownHostException e) {
+            log.warn("Could not download flavor list - are we offline? Returning empty list");
+            return result;
         } catch (Exception e) {
             throw new IOException("Could not load flavor list from " + url, e);
         }
         
+    }
+    
+    protected boolean isDebugConsoleRunning() {
+        log.warn("isDebugConsoleRunning()");
+        
+        if (tcpserver == null) {
+            return false;
+        }
+
+        switch(tcpserver.getStatus()) {
+            case connected:
+            case connecting:
+            case listening:
+                return true;
+            case error:
+            case passive:
+            default:
+                return false;
+        }
+    }
+    
+    protected void startDebugConsole() {
+        log.warn("startDebugConsole()");
+
+        if (configuration == null) {
+            log.warn("No configuration loaded. Not starting console server.");
+            return;
+        }
+        if (configuration.getActiveInstallation() == null) {
+            log.warn("No active Oolite installation. Not starting console server.");
+            return;
+        }
+        if (!configuration.getActiveInstallation().isDebugCapable()) {
+            log.warn("No Debug OXP detected. Not starting console server.");
+            return;
+        }
+        if (configuration.getActiveInstallation().getMqtt() == null) {
+            log.warn("No Mqtt data. Not starting console server.");
+            return;
+        }
+        
+        tcpserver = new TCPServer();
+        try {
+            MQTTAdapter ma = new MQTTAdapter();
+            ma.init(tcpserver, configuration.getActiveInstallation().getMqtt());
+            tcpserver.startup(ma);
+        } catch (Exception e) {
+            log.error("Could not start tcp server", e);
+            tcpserver.shutdown();
+            tcpserver = null;
+        }
+    }
+    
+    protected void stopDebugConsole() {
+        log.warn("stopDebugConsole()");
+        
+        if (tcpserver != null) {
+            tcpserver.shutdown();
+            tcpserver = null;
+        }
     }
 }
